<resources>
    <string name="app_name">Notes</string>
    <string name="notes">Notes</string>
    <string name="splash_time" translatable="false">14:03</string>n
    <string name="splash_note" translatable="false">Lndjsndj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljfdj sjdks ksdns dksjd dknflj dljf</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="first_class">First class</string>
    <string name="second_class">Second class</string>
    <string name="third_class">Third class</string>
    <string name="send">Send</string>
    <string name="error">Error</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="select_picture">Select Picture</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="error_empty_filed">This field can\'t be empty</string>

    <string name="description_icon">Icon</string>
</resources>
