<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:title="@string/add"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_filter"
        android:title="@string/filter">

        <menu>

            <item
                android:id="@+id/action_filter_first_class"
                android:title="@string/first_class"
                android:icon="@drawable/first_class_24dp"
                android:checkable="true"/>

            <item
                android:id="@+id/action_filter_second_class"
                android:title="@string/second_class"
                android:icon="@drawable/second_class_24dp"
                android:checkable="true"/>

            <item
                android:id="@+id/action_filter_third_class"
                android:title="@string/third_class"
                android:icon="@drawable/third_class_24dp"
                android:checkable="true"/>

        </menu>

    </item>

</menu>