<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_root_layout_color">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/icon_cv"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                app:cardCornerRadius="5dp"
                android:layout_marginTop="@dimen/dimen10dp"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/icon_iv"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    android:background="@color/full_opacity_color"
                    android:src="@drawable/upload_image_icon"
                    android:contentDescription="@string/description_icon" />

            </android.support.v7.widget.CardView>

            <RadioGroup
                android:id="@+id/classes_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/first_class_rb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:button="@null"
                    android:background="@drawable/selector_class_item"
                    android:checked="true"
                    android:text="@string/first_class"
                    android:layout_weight="1"
                    android:padding="@dimen/dimen10dp"
                    android:gravity="center"
                    android:drawableStart="@drawable/first_class_24dp"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/second_class_rb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:button="@null"
                    android:background="@drawable/selector_class_item"
                    android:layout_weight="1"
                    android:text="@string/second_class"
                    android:padding="@dimen/dimen10dp"
                    android:gravity="center"
                    android:drawableStart="@drawable/second_class_24dp"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/third_class_rb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:button="@null"
                    android:background="@drawable/selector_class_item"
                    android:layout_weight="1"
                    android:text="@string/third_class"
                    android:padding="@dimen/dimen10dp"
                    android:gravity="center"
                    android:drawableStart="@drawable/third_class_24dp"/>

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen10dp"
                android:padding="@dimen/dimen10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title_tiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimen10dp"
                android:paddingEnd="@dimen/dimen10dp"
                android:paddingTop="@dimen/dimen5dp"
                android:paddingBottom="@dimen/dimen10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_tiet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text"
                    android:inputType="textMultiLine"
                    android:background="@color/full_opacity_color"
                    android:padding="@dimen/dimen1dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>